# uap-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  resources.py
benches/: top_middle_bottom.rs
resources/: README.md  regexes.json  regexes.msgpack
resources/test_resources/: additional_os_tests.json  additional_os_tests.msgpack  firefox_user_agent_strings.json  firefox_user_agent_strings.msgpack  opera_mini_user_agent_strings.json  opera_mini_user_agent_strings.msgpack  pgts_browser_list.json  pgts_browser_list.msgpack  podcasting_user_agent_strings.json  podcasting_user_agent_strings.msgpack
resources/tests/: test_device.json  test_device.msgpack  test_os.json  test_os.msgpack  test_ua.json  test_ua.msgpack
src/: benchmarks.rs  client.rs  device.rs  lib.rs  os.rs  parser.rs  result.rs  ua.rs  ua_core.rs  yaml.rs
src/parser/: browser.rs  device.rs  mod.rs  os.rs
tests/: uap_core_tests.rs  yaml.rs
tests/test_data/: mod.rs
