[package]
name = "uap-rust"
version = "0.1.0"
authors = ["Jannik Schürg <jannschu@posteo.de>", "Martin <martin@yacc.io>"]
description = "User agent parser library for Rust based on the ua-parser project"

license = "MIT"
readme = "README.md"
repository = "https://github.com/yaccio/uap-rust"
documentation = "https://mrbechcrates.github.io/uap-rust-doc/uap_rust/index.html"
keywords = ["user", "agent"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "top_middle_bottom"
harness = false

[dependencies]
owning_ref = "0.4"
lazy-init = "0.3"
lazy_static = "1.0"
regex = "1.0"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
