[package]
name = "uap-rust"
version = "0.2.0"
authors = ["Jannik Schürg <jannschu@posteo.de>", "Martin <martin@yacc.io>"]
description = "User agent parser library for Rust based on the ua-parser project"

license = "MIT"
readme = "README.md"
repository = "https://github.com/jannschu/uap-rust"
keywords = ["user", "agent", "parse"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "top_middle_bottom"
harness = false

[dependencies]
semver-parser = "0.9"
rental = "0.5"
stable_deref_trait = "1.1"
once_cell = "0.1"
lazy_static = "1.0"
regex = "1.0"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
